--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h2>セクション2</h2>
       <p>
         ここにコンテンツを追加してください。画像ギャラリーやリンク集、履歴書の一部を載せるなど、
-        使い方はいろいろあります。
+        使い方はいろいろあります。春はあけぼの。ようよう白くなり行く山気は少しア借り手。
       </p>
     </section>
     <section id="section3">
